# YAAW

./: CMakeLists.txt  README.md  build.bat
Source/: Constant.h  TcpClient.h  TcpConnection.h  TcpServer.h  tcp_client.h  tcp_connection.h  tcp_server.h
Source/Structs/: PacketData.h  packet_data.h
Test/: CMakeLists.txt
Test/ClientConsole/: CMakeLists.txt
Test/ClientConsole/Source/: ClientConsole.cpp  ClientSocket.h
Test/ServerConsole/: CMakeLists.txt
Test/ServerConsole/Source/: Person.h  ServerConsole.cpp  ServerSocket.h
include/: SocketLib.h
